fixed a box that made text overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body{
     font-size: 40px;
     color: white;
     margin: 0 auto;
-    width: 400px;
+    width: 450px;
     height: 200px;
     text-align: center;
     border-bottom: solid white 3px;
